<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/llLoginFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondary">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_user_email"
                android:drawablePadding="14dp"
                android:drawableTint="@color/colorSecondary"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:textColor="@color/colorSecondary"
                android:backgroundTint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/visibility_selector"
            app:passwordToggleTint="@color/colorSecondary"
            android:textColorHint="@color/colorSecondary">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_lock_outline_24dp"
                android:drawablePadding="14dp"
                android:drawableTint="@color/colorSecondary"
                android:inputType="textPassword"
                android:hint="@string/user_password"
                android:textColor="@color/colorSecondary"
                android:backgroundTint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tvLoginForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoginButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/llLoginFields"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.10">
        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/ic_googleplus"
            android:drawableTint="@color/colorSecondary"
            android:drawablePadding="4dp"
            android:paddingHorizontal="16dp"
            android:maxLines="1"
            android:text="@string/google_signin"
            android:textSize="20sp"
            android:textColor="@color/colorSecondary" />
        <Button
            android:id="@+id/btnLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/ic_facebook"
            android:drawableTint="@color/colorSecondary"
            android:drawablePadding="2dp"
            android:paddingHorizontal="8dp"
            android:maxLines="1"
            android:text="@string/facebook_signin"
            android:textSize="20sp"
            android:textColor="@color/colorSecondary" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLoginSignin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_in_confirm"
        android:textSize="20sp"
        android:textColor="@color/colorSecondary"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/llLoginButtons"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLoginSignin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:text="@string/signup_suggest"/>
        <TextView
            android:id="@+id/tvSignUpSuggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorSecondary"
            android:text="@string/sign_up"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/version"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"/>

</android.support.constraint.ConstraintLayout>