<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/llRegisterFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.20"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondary">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:drawableStart="@drawable/ic_user_email"
                android:drawablePadding="14dp"
                android:drawableTint="@color/colorSecondary"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email"
                android:textColor="@color/colorSecondary"
                android:backgroundTint="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/visibility_selector"
            app:passwordToggleTint="@color/colorSecondary"
            android:textColorHint="@color/colorSecondary">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_lock_outline_24dp"
                android:drawablePadding="14dp"
                android:drawableTint="@color/colorSecondary"
                android:inputType="textPassword"
                android:hint="@string/user_password"
                android:textColor="@color/colorSecondary"
                android:backgroundTint="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRegConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/transparent"
            android:textColorHint="@color/colorSecondary"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRegConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_lock_24dp"
                android:drawablePadding="14dp"
                android:drawableTint="@color/colorSecondary"
                android:inputType="textPassword"
                android:hint="@string/confirm_user_password"
                android:textColor="@color/colorSecondary"
                android:backgroundTint="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegSignup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_up_confirm"
        android:textSize="20sp"
        android:textColor="@color/colorSecondary"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/llRegisterFields"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegSignup">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:text="@string/signin_suggest"/>
        <TextView
            android:id="@+id/tvSignInSuggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorSecondary"
            android:text="@string/sign_in"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/version"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"/>

</android.support.constraint.ConstraintLayout>